Added related work

--- a/tex/congestion.bib
+++ b/tex/congestion.bib
@@ -24,3 +24,68 @@
 	year = {2015},
 	pages = {395--408}
 }
+
+@inproceedings{jacobson_congestion_1988,
+	title = {Congestion avoidance and control},
+	volume = {18},
+	booktitle = {{ACM} {SIGCOMM} computer communication review},
+	publisher = {ACM},
+	author = {Jacobson, Van},
+	year = {1988},
+	pages = {314--329}
+}
+
+@article{brakmo_tcp_1995,
+	title = {{TCP} {Vegas}: {End} to end congestion avoidance on a global {Internet}},
+	volume = {13},
+	number = {8},
+	journal = {IEEE Journal on selected Areas in communications},
+	author = {Brakmo, Lawrence S. and Peterson, Larry L.},
+	year = {1995},
+	pages = {1465--1480}
+}
+
+@article{ha_cubic:_2008,
+	title = {{CUBIC}: a new {TCP}-friendly high-speed {TCP} variant},
+	volume = {42},
+	number = {5},
+	journal = {ACM SIGOPS Operating Systems Review},
+	author = {Ha, Sangtae and Rhee, Injong and Xu, Lisong},
+	year = {2008},
+	pages = {64--74}
+}
+
+@inproceedings{tan_compound_2006,
+	title = {A compound {TCP} approach for high-speed and long distance networks},
+	booktitle = {Proceedings-{IEEE} {INFOCOM}},
+	author = {Tan, Kun and Song, Jingmin and Zhang, Qian and Sridharan, Murad},
+	year = {2006}
+}
+
+@inproceedings{dukkipati_proportional_2011,
+	title = {Proportional rate reduction for {TCP}},
+	booktitle = {Proceedings of the 2011 {ACM} {SIGCOMM} conference on {Internet} measurement conference},
+	publisher = {ACM},
+	author = {Dukkipati, Nandita and Mathis, Matt and Cheng, Yuchung and Ghobadi, Monia},
+	year = {2011},
+	pages = {155--170}
+}
+
+@article{cardwell_bbr:_2016,
+	title = {{BBR}: {Congestion}-based congestion control},
+	volume = {14},
+	number = {5},
+	journal = {Queue},
+	author = {Cardwell, Neal and Cheng, Yuchung and Gunn, C Stephen and Yeganeh, Soheil Hassas and Jacobson, Van},
+	year = {2016},
+	pages = {50}
+}
+
+@inproceedings{geurts_machine_2004,
+	title = {A machine learning approach to improve congestion control over wireless computer networks},
+	booktitle = {Data {Mining}, 2004. {ICDM}'04. {Fourth} {IEEE} {International} {Conference} on},
+	publisher = {IEEE},
+	author = {Geurts, Pierre and El Khayat, Ibtissam and Leduc, Guy},
+	year = {2004},
+	pages = {383--386}
+}
